Define and use conversion from String, ArrayList and InputStream to URI, Scala's List and String respectively